# Synthesis-Code

./: Conditions Copilot.md  README.md  pyproject.toml  requirements.txt
condrec/: analysis.py  cli.py  config.py  gui.py  schemas.py
condrec/agent/: __init__.py  orchestrator.py
condrec/llm/: __init__.py  client.py  prompts.py
condrec/search/: __init__.py  similarity.py
condrec/storage/: __init__.py  session.py
condrec/validation/: __init__.py  checks.py
data/dicts/: additives.json  bases.json  catalysts.json  ligands.json  solvents.json
examples/: esterification.txt  expected_reply_round1.json  invalid.txt  payload_round1.json  sn2.txt  with_agents.txt
src/conditions_copilot/: capabilities.py  cli.py  controller.py  schemas.py
src/conditions_copilot/llm_prompting/: client.py  system.txt
src/conditions_copilot/tools/: dicts.py  featurize_basic.py  ml.py  retrieval.py  validator.py
tests/: test_analysis.py
