[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "condrec"
version = "0.1.0"
description = "Minimal CLI for reaction SMILES analysis using RDKit"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
condrec = "condrec.cli:main"
condrec-gui = "condrec.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["condrec*"]

[project.optional-dependencies]
gui = [
  "PyQt6>=6.5",
]
